Add wiringPi recipes

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,8 @@ BBFILE_COLLECTIONS += "rover"
 BBFILE_PATTERN_rover = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rover = "12"
 
-IMAGE_INSTALL_append = " apache2 php"
+# Add the packages to the image
+IMAGE_INSTALL_append = " apache2 php wiringpi"
+
+# Add the libraries to the sdk
+#TOOLCHAIN_TARGET_TASK_append = " lib_wiringpi"
