Add php-modphp to the image

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PATTERN_rover = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rover = "12"
 
 # Add the packages to the image
-IMAGE_INSTALL_append = " apache2 php wiringpi"
+IMAGE_INSTALL_append = " apache2 php php-cli php-modphp wiringpi"
 
 # Add the libraries to the sdk
-#TOOLCHAIN_TARGET_TASK_append = " lib_wiringpi"
+#TOOLCHAIN_TARGET_TASK_append = " lib_wiringPi"
