--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,7 +10,8 @@ BBFILE_PATTERN_rover = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rover = "12"
 
 # Add the packages to the image
-IMAGE_INSTALL_append = " apache2 php php-cli php-modphp wiringPi"
+IMAGE_INSTALL_append = " apache2 php php-cli php-modphp wiringPi i2c-tools roverapp"
 
 # Add the libraries to the sdk
-#TOOLCHAIN_TARGET_TASK_append = " lib_wiringPi"
+TOOLCHAIN_TARGET_TASK_append = ""
+
