--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,7 +12,7 @@ BBFILE_PRIORITY_rover = "12"
 #FIXME: Move wiringPi, i2c-tools, jsoncpp, python-psutil, raspicam to be roverapp dependencies
 
 # Add the packages to the image
-IMAGE_INSTALL_append = " apache2 php php-cli php-modphp roverapp nodejs"
+IMAGE_INSTALL_append = " apache2 php php-cli php-modphp rover-app nodejs"
 
 
 # Add the libraries to the sdk
