--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,10 +9,8 @@ BBFILE_COLLECTIONS += "rover"
 BBFILE_PATTERN_rover = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rover = "12"
 
-#FIXME: Move wiringPi, i2c-tools, jsoncpp, python-psutil, raspicam to be roverapp dependencies
-
 # Add the packages to the image
-IMAGE_INSTALL_append = " apache2 php php-cli php-modphp rover-app nodejs"
+IMAGE_INSTALL_append = " apache2 php php-cli php-modphp rover-app rover-web mjpg-streamer"
 
 
 # Add the libraries to the sdk
