Update nodejs version to 8.9.0

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,6 +12,8 @@ BBFILE_PRIORITY_rover = "12"
 # Add the packages to the image
 IMAGE_INSTALL_append = " apache2 php php-cli php-modphp rover-app rover-web mjpg-streamer"
 
+PREFERRED_VERSION_nodejs = "8.9.0"
+
 
 # Add the libraries to the sdk
 TOOLCHAIN_TARGET_TASK_append = ""
