--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,11 +10,10 @@ BBFILE_PATTERN_rover = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rover = "12"
 
 # Add the packages to the image
-IMAGE_INSTALL_append = " apache2 php php-cli php-modphp rover-app rover-web rover-web-stream mjpg-streamer v4l-utils"
+IMAGE_INSTALL_append = " rover-app rover-web rover-web-stream mjpg-streamer hostapd"
 
 PREFERRED_VERSION_nodejs = "8.9.0"
 
-
 # Add the libraries to the sdk
-TOOLCHAIN_TARGET_TASK_append = ""
+TOOLCHAIN_TARGET_TASK_append = " wiringPi wiringPi-dev jsoncpp jsoncpp-dev i2c-tools i2c-tools-dev"
 
