Add Paho MQTT C recipe

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,10 +10,30 @@ BBFILE_PATTERN_rover = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rover = "12"
 
 # Add the packages to the image
-IMAGE_INSTALL_append = " rover-app rover-web rover-web-stream mjpg-streamer hostapd"
+IMAGE_INSTALL_append = " \
+	rover-app \
+	rover-web \
+	rover-web-stream \
+	mjpg-streamer \
+	opencv \
+	glog \
+	raspicam"
 
 PREFERRED_VERSION_nodejs = "8.9.0"
+PREFERRED_VERSION_glog = "0.3.4"
 
 # Add the libraries to the sdk
-TOOLCHAIN_TARGET_TASK_append = " wiringPi wiringPi-dev jsoncpp jsoncpp-dev i2c-tools i2c-tools-dev"
+TOOLCHAIN_TARGET_TASK_append = " \
+	wiringPi \
+	wiringPi-dev \
+	jsoncpp \
+	jsoncpp-dev \
+	i2c-tools \
+	i2c-tools-dev \
+	opencv \
+	bluez5 \
+	paho-mqtt-c \
+	paho-mqtt-c-dev \
+	raspicam \
+	raspicam-dev"
 
