Change extra patch to be applied in do_patch_append

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -27,7 +27,7 @@ TOOLCHAIN_TARGET_TASK_append = " \
 	wiringPi-dev \
 	jsoncpp-dev \
 	i2c-tools-dev \
-	opencv \
+	opencv-dev \
 	bluez5 \
 	paho-mqtt-c-dev \
 	raspicam-dev"
