--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -24,6 +24,7 @@ PREFERRED_VERSION_glog = "0.3.4"
 
 # Add the libraries to the sdk
 TOOLCHAIN_TARGET_TASK_append = " \
+	af-binder-dev \
 	wiringPi-dev \
 	jsoncpp-dev \
 	i2c-tools-dev \
