chg: dev: Update rover-app to 0.0.4 and release meta-rover 0.1.0

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -32,5 +32,7 @@ TOOLCHAIN_TARGET_TASK_append = " \
 	bluez5 \
 	paho-mqtt-c-dev \
 	rover-app-dev \
-	raspicam-dev"
+	raspicam-dev \
+        libssp \
+        libssp-dev"
 
