--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,7 +25,7 @@ PREFERRED_VERSION_glog = "0.3.4"
 # Add the libraries to the sdk
 TOOLCHAIN_TARGET_TASK_append = " \
 	af-binder-dev \
-	wiringPi-dev \
+	wiringpi-dev \
 	jsoncpp-dev \
 	i2c-tools-dev \
 	opencv-dev \
