new: dev: Add the Rover Services recipes

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,6 +11,20 @@ BBFILE_PRIORITY_rover = "12"
 
 # Add the packages to the image
 IMAGE_INSTALL_append = " \
+ 	rover-menu-service \
+ 	rover-buttons-service \
+ 	rover-buzzer-service \
+ 	rover-config-service \
+ 	rover-dht22-service \
+ 	rover-display-service \
+ 	rover-driving-service \
+ 	rover-grooveultrasonicsensor-service \
+ 	rover-gy521-service \
+ 	rover-hcsr04ultrasonicsensor-service \
+ 	rover-hmc5883l-service \
+ 	rover-infraredsensor-service \
+ 	rover-qmc5883l-service \
+ 	rover-utils-service \
 	rover-app \
 	mjpg-streamer \
 	opencv \
