chg: dev: Change rover services to use PV git

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,6 +26,8 @@ IMAGE_INSTALL_append = " \
  	rover-qmc5883l-service \
  	rover-utils-service \
 	rover-app \
+        rover-services-api \
+        rover-telemetry-old \
 	mjpg-streamer \
 	opencv \
 	raspicam"
@@ -35,6 +37,7 @@ PREFERRED_VERSION_glog = "0.3.4"
 
 # Add the libraries to the sdk
 TOOLCHAIN_TARGET_TASK_append = " \
+        rover-services-api \
 	af-binder-dev \
 	wiringpi-dev \
 	jsoncpp-dev \
