--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -38,6 +38,7 @@ PREFERRED_VERSION_glog = "0.3.4"
 # Add the libraries to the sdk
 TOOLCHAIN_TARGET_TASK_append = " \
         rover-services-api \
+        rover-services-api-dev \
 	af-binder-dev \
 	wiringpi-dev \
 	jsoncpp-dev \
